welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:3: error: not found: type Red
	setCouleurBrosse(c:Red);
                           ^