welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.code
def dogHouse() {
	leveBrosse();
	setCouleurBrosse(c:Red);
	avance(); avance(); gauche();
	avance(); avance(); gauche();
	avance(); avance(); gauche();
	avance(); avance(); gauche();

}
	var i=0;
	while(i<4){
		
		
		dogHouse();
		baisseBrosse();
		avance();
		avance();
		avance();
		avance();
		
		
		i=i+1;
		
		
		
		
		
		
		}
	
	
	
	
	
	
	
	
	
	